<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:showIn="navigation_view">

    <item android:title="">
        <menu>
            <item
                android:id="@+id/nav_techn"
                android:title="@string/menu_technology"
                app:actionViewClass="android.widget.CheckBox" />
            <item
                android:id="@+id/nav_electronic"
                android:title="@string/menu_electronic"
                app:actionViewClass="android.widget.CheckBox" />
            <item
                android:id="@+id/nav_furniture_home"
                android:title="@string/menu_furniture_and_home"
                app:actionViewClass="android.widget.CheckBox"/>
            <item
                android:id="@+id/nav_woman_fashion"
                android:title="@string/menu_woman_fashion"
                app:actionViewClass="android.widget.CheckBox" />
            <item
                android:id="@+id/nav_sport_adventure"
                android:title="@string/menu_sport_and_adventure"
                app:actionViewClass="android.widget.CheckBox"/>

        </menu>
    </item>

</menu>
